--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Forklift is an application where someone could publish messages about topics that other users or applications can subscribe to. The goal of forklift is to show how a serverless application would look like in production. This means that security and quality are primary concerns.",
   "scripts": {
-    "test": "tape test/test.js"
+    "test": "tape src/test/**/*.js",
+    "lint": "eslint src/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/rfeijolo/forklift#readme",
   "devDependencies": {
+    "eslint": "^3.15.0",
     "faucet": "0.0.1",
     "tape": "^4.6.3"
   }
