Make package private again

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "forklift",
   "version": "1.0.0",
   "description": "Forklift is an application where someone could publish messages about topics that other users or applications can subscribe to. The goal of forklift is to show how a serverless application would look like in production. This means that security and quality are primary concerns.",
+  "private": true,
   "scripts": {
     "test": "istanbul cover tape ./src/test/**/*.js --report lcovonly -- -R spec",
     "coverage-publish": "codecov",
