--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,11 @@
 machine:
   services:
     - docker
+
+dependencies:
+  override:
+    - sudo pip install --upgrade docker-compose
+
 test:
   override:
     - make app.lint
