--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
-version: "3"
+version: "2"
 services:
   forklift:
-      build: .
-      dockerfile: docker/forklift/Dockerfile
+      build:
+        context: .
+        dockerfile: docker/forklift/Dockerfile
