--- a/serverless.yml
+++ b/serverless.yml
@@ -6,5 +6,5 @@ provider:
   runtime: nodejs4.3
 
 functions:
-  hello:
-    handler: src/handler.hello
+  createTopic:
+    handler: src/handler.createTopic
