--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^3.15.0",
     "faucet": "0.0.1",
     "istanbul": "^0.4.5",
+    "serverless-offline": "^3.8.3",
     "tape": "^4.6.3"
   },
   "dependencies": {
