--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/rfeijolo/forklift#readme",
   "devDependencies": {
+    "babel-preset-latest": "^6.22.0",
     "codecov": "^1.0.1",
     "eslint": "^3.15.0",
     "faucet": "0.0.1",
     "istanbul": "^0.4.5",
+    "serverless-babel-plugin": "^0.1.3",
     "serverless-offline": "^3.8.3",
     "tape": "^4.6.3"
   },
