--- a/serverless.yml
+++ b/serverless.yml
@@ -18,6 +18,11 @@ provider:
 
 plugins:
   - serverless-offline
+  - serverless-babel-plugin
+
+custom:
+  babelPresets:
+    - latest
 
 functions:
   createTopic:
