--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/rfeijolo/forklift#readme",
   "devDependencies": {
+    "aws-sdk-mock": "^1.6.1",
     "babel-preset-latest": "^6.22.0",
     "codecov": "^1.0.1",
     "eslint": "^3.15.0",
