--- a/package.json
+++ b/package.json
@@ -21,17 +21,18 @@
   "homepage": "https://github.com/rfeijolo/forklift#readme",
   "devDependencies": {
     "aws-sdk-mock": "^1.6.1",
-    "babel-preset-latest": "^6.22.0",
     "codecov": "^1.0.1",
     "eslint": "^3.15.0",
     "faucet": "0.0.1",
     "istanbul": "^0.4.5",
-    "serverless-babel-plugin": "^0.1.3",
     "serverless-offline": "^3.8.3",
     "tape": "^4.6.3"
   },
   "dependencies": {
     "aws-sdk": "^2.11.0",
     "uuid": "^3.0.1"
+  },
+  "engines": {
+    "node": "=4.3.2"
   }
 }
