--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Forklift is an application where someone could publish messages about topics that other users or applications can subscribe to. The goal of forklift is to show how a serverless application would look like in production. This means that security and quality are primary concerns.",
   "private": true,
   "scripts": {
-    "test": "istanbul cover tape ./src/test/**/*.js --report lcovonly -- -R spec",
+    "integration-test": "tape ./src/test/integration/**/*.js",
+    "unit-test": "istanbul cover tape ./src/test/unit/**/*.js --report lcovonly -- -R spec",
+    "test": "npm run unit-test && npm run integration-test ",
     "coverage-publish": "codecov",
     "lint": "eslint ./src/**/*.js"
   },
@@ -26,6 +28,7 @@
     "faucet": "0.0.1",
     "istanbul": "^0.4.5",
     "serverless-offline": "^3.8.3",
+    "supertest": "^3.0.0",
     "tape": "^4.6.3"
   },
   "dependencies": {
