--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "eslint": "^3.15.0",
     "faucet": "0.0.1",
     "istanbul": "^0.4.5",
-    "serverless-offline": "^3.8.3",
+    "serverless": "^1.8.0",
     "supertest": "^3.0.0",
     "tape": "^4.6.3"
   },
