--- a/serverless.yml
+++ b/serverless.yml
@@ -14,9 +14,20 @@ provider:
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
-      Resource: "arn:aws:dynamodb:${self:provider.region}:*:table/topics"
+        - dynamodb:ListStreams
+        - dynamodb:GetShardIterator
+        - dynamodb:GetRecords
+        - dynamodb:DescribeStream
+      Resource: "arn:aws:dynamodb:${self:provider.region}:*:table/*"
 
 functions:
+  createMessage:
+    handler: src/handler.createMessage
+    events:
+      - http:
+          path: messages
+          method: post
+          cors: true
   createTopic:
     handler: src/handler.createTopic
     events:
@@ -24,9 +35,29 @@ functions:
           path: topics
           method: post
           cors: true
+  notify:
+    handler: src/handler.notify
+    events:
+      - stream: arn:aws:dynamodb:us-east-1:651189268295:table/messages/stream/2017-03-25T19:45:51.075
 
 resources:
   Resources:
+    MessagesTable:
+      Type: "AWS::DynamoDB::Table"
+      DeletionPolicy: Retain
+      Properties:
+        TableName: "messages"
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+        StreamSpecification:
+          StreamViewType: NEW_IMAGE
     TopicsTable:
       Type: "AWS::DynamoDB::Table"
       DeletionPolicy: Retain
