--- a/serverless.yml
+++ b/serverless.yml
@@ -28,6 +28,8 @@ functions:
           path: topics/{topicId}/messages
           method: post
           cors: true
+          authorizer:
+            arn: arn:aws:cognito-idp:us-east-1:651189268295:userpool/us-east-1_adJJylZfM
   createTopic:
     handler: src/topic/handler.createTopic
     events:
@@ -36,7 +38,7 @@ functions:
           method: post
           cors: true
           authorizer:
-            arn: arn:aws:cognito-idp:us-east-1:651189268295:userpool/us-east-1_wLNFEdP92
+            arn: arn:aws:cognito-idp:us-east-1:651189268295:userpool/us-east-1_adJJylZfM
 
 resources:
   Resources:
