Mock database with sinon to use require('database')

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "istanbul": "^0.4.5",
     "serverless": "^1.8.0",
     "serverless-offline": "^3.13.0",
+    "sinon": "^2.1.0",
     "supertest": "^3.0.0",
     "tape": "^4.6.3"
   },
