--- a/package.json
+++ b/package.json
@@ -22,21 +22,25 @@
   },
   "homepage": "https://github.com/rfeijolo/forklift#readme",
   "devDependencies": {
-    "aws-sdk-mock": "^1.6.1",
-    "codecov": "^1.0.1",
-    "eslint": "^3.15.0",
+    "aws-sdk-mock": "1.6.1",
+    "codecov": "2.1.0",
+    "eslint": "3.15.0",
     "faucet": "0.0.1",
-    "istanbul": "^0.4.5",
-    "serverless": "^1.12.1",
-    "serverless-offline": "^3.13.0",
-    "sinon": "^2.1.0",
-    "supertest": "^3.0.0",
-    "tape": "^4.6.3"
+    "istanbul": "0.4.5",
+    "serverless": "1.12.1",
+    "serverless-offline": "3.13.0",
+    "sinon": "2.1.0",
+    "supertest": "3.0.0",
+    "tape": "4.6.3"
   },
   "dependencies": {
-    "ajv": "^4.11.5",
-    "aws-sdk": "^2.11.0",
-    "uuid": "^3.0.1"
+    "ajv": "5.0.1",
+    "aws-sdk": "2.49.0",
+    "aws-sdk-mock": "1.7.0",
+    "eslint": "3.19.0",
+    "serverless-offline": "3.13.5",
+    "sinon": "2.2.0",
+    "uuid": "3.0.1"
   },
   "engines": {
     "node": "=4.3.2"
