--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-#Local environment variables
+# Local environment variables
 .env
 .serverless/
+
+# Comment file
+.notes
